@@ -9,6 +9,7 @@
 6. Add 'Shuffle' options to alarm dialog.
 7. Re-add some missing Russian translations.
 8. Always use name 'Lyrion'
+9. List album contributors in 'Information' page.
 
 4.4.1
 -----
